--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="nav-link active" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="cookieclicker.html">Cookie Clicker</a>
+        <a class="nav-link disabled" href="cookieclicker.html">Cookie Clicker (broken)</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="HackedKnight.html">Hacked Knight</a>
@@ -38,9 +38,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-4">
-      <h2>About the website</h2>
-      <p>This website is where I will be hosting my future games. Stay tuned!</p>
-      <h3 class="mt-4">Game Links</h3>
+      <h2 class="mt-4">My Games</h2>
       <p>Lorem ipsum dolor sit ame.</p>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
@@ -56,10 +54,10 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>Cookie Clicker Out!</h2>
+      <h2>Cookie Clicker Released</h2>
       <h5>May 1, 2022</h5>
-      <p>I've gotten cookie clicker out on this website!</p>
-      <p>So you can play during school. I've also made some slight changes to the fool's day buildings...</p>
+      <p>Cookie clicker is on this website and playable during school!</p>
+      <p>Warning: Remember to export your game! This website will NOT save your progress!</p>
     </div>
   </div>
 </div>
