--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h2>Cookie Clicker Released</h2>
       <h5>May 1, 2022</h5>
       <p>Cookie clicker is on this website and playable during school!</p>
-      <p>Warning: Remember to export your game! This website will NOT save your progress!</p>
+      <p>Warning: Remember to save your game!</p>
     </div>
   </div>
 </div>
