--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
         <a class="nav-link active" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="cookieclicker.html">Cookie Clicker (broken)</a>
+        <a class="nav-link" href="cookieclicker.html">Cookie Clicker</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="HackedKnight.html">Hacked Knight</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="tbag.html">TBAG</a>
       </li>
     </ul>
   </div>
@@ -50,14 +53,24 @@
         <li class="nav-item">
           <a class="nav-link" href="HackedKnight.html">Hacked Knight</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="tbag.html">Hacked Knight</a>
+        </li>
       </ul>
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
       <h2>Cookie Clicker Released</h2>
-      <h5>May 1, 2022</h5>
+      <h5>April 30, 2022</h5>
       <p>Cookie clicker is on this website and playable during school!</p>
       <p>Warning: Remember to save your game!</p>
+      
+      <br><br>
+      
+      <h2>TBAG Game</h2>
+      <h5>May 1, 2022</h5>
+      <p>This is a new game I made with Python. I found this in my archives and decided to put it here!</p>
+      <p>This game is currently in beta.</p>
     </div>
   </div>
 </div>
