--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="nav-link active" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="cookieclicker.html">Cookie Clicker (broken)</a>
+        <a class="nav-link" href="cookieclicker.html">Cookie Clicker</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="HackedKnight.html">Hacked Knight</a>
