--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
         <a class="nav-link active" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="cookieclicker.html">Cookie Clicker</a>
+        <a class="nav-link" href="cookieclicker">Cookie Clicker</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="HackedKnight.html">Hacked Knight</a>
+        <a class="nav-link" href="HackedKnight">Hacked Knight</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="tbag">Hacked Knight</a>
       </li>
     </ul>
   </div>
@@ -44,12 +47,16 @@
           <a class="nav-link active" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="cookieclicker.html">Cookie Clicker</a>
+          <a class="nav-link" href="cookieclicker">Cookie Clicker</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="HackedKnight.html">Hacked Knight</a>
+          <a class="nav-link" href="HackedKnight">Hacked Knight</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="tbag">Python TBAG</a>
         </li>
       </ul>
+      <iframe src="https://discord.com/widget?id=970464539218964521&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
