--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a class="nav-link" href="HackedKnight">Hacked Knight</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="tbag">Hacked Knight</a>
+        <a class="nav-link" href="tbag">Python TBAG</a>
       </li>
     </ul>
   </div>
