--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a class="nav-link" href="HackedKnight.html">Hacked Knight</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="2048.html">2048</a>
+        <a class="nav-link" href="play2048.html">2048</a>
       </li>
     </ul>
   </div>
@@ -53,7 +53,7 @@
           <a class="nav-link" href="HackedKnight.html">Hacked Knight</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="2048.html">2048</a>
+          <a class="nav-link" href="play2048.html">2048</a>
         </li>
       </ul>
       <hr class="d-sm-none">
