--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
         </li>
       </ul>
       <hr class="d-sm-none">
+      <br>
+      <h2 class="mt-4">Extras</h2>
+      <ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+          <a class="nav-link" href="hackpack.html">Hackpacks</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">More to come!</a>
+        </li>
+      </ul>
+      <hr class="d-sm-none">
     </div>
     <div class="col-sm-6">
       <h2 class="mt-5">Start Jumbling</h2>
