--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h2 class="mt-4">Extras</h2>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link" href="hackpack.html">Hackpacks</a>
+          <a class="nav-link disabled" href="#">Hackpacks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#">More to come!</a>
