--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <h2 class="mt-4">Extras</h2>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Hackpacks</a>
+          <a class="nav-link" href="#">Hackpacks</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">More to come!</a>
+          <a class="nav-link" href="cardgallery.html">Mythology Card Gallery!</a>
         </li>
       </ul>
       <hr class="d-sm-none">
