--- a/cardgallery.html
+++ b/cardgallery.html
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+        
+          div {
+      margin: auto
+            }
 /* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
@@ -125,13 +129,13 @@
     <!-- Thumbnail images -->
     <div class="row">
       <div class="column">
-        <img class="demo cursor" src="Zeus.png" style="width:100%" onclick="currentSlide(1)" alt="Zeus">
+        <img class="demo cursor" src="Zeus.png" style="width:50%" onclick="currentSlide(1)" alt="Zeus">
       </div>
       <div class="column">
-        <img class="demo cursor" src="Brahman.png" style="width:100%" onclick="currentSlide(2)" alt="Brahman">
+        <img class="demo cursor" src="Brahman.png" style="width:50%" onclick="currentSlide(2)" alt="Brahman">
       </div>
       <div class="column">
-        <img class="demo cursor" src="Yawei & Jesus.png" style="width:100%" onclick="currentSlide(3)" alt="Yawei & Jesus">
+        <img class="demo cursor" src="Yawei & Jesus.png" style="width:50%" onclick="currentSlide(3)" alt="Yawei & Jesus">
       </div>
     </div>
   </div>
