--- a/cardgallery.html
+++ b/cardgallery.html
@@ -127,7 +127,7 @@
     </div>
   
     <!-- Thumbnail images -->
-    <div class="row">
+    <div class="row" style="width:50%">
       <div class="column">
         <img class="demo cursor" src="Zeus.png" style="width:50%" onclick="currentSlide(1)" alt="Zeus">
       </div>
