--- a/cardgallery.html
+++ b/cardgallery.html
@@ -84,7 +84,7 @@
 /* Six columns side by side */
 .column {
   float: left;
-  width: 33.33%;
+  width: 25%;
 }
 
 /* Add a transparency effect for thumnbail images */
@@ -96,27 +96,73 @@
 .demo:hover {
   opacity: 1;
 }
+
+body {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 25%;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+li a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+li a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+.centerimg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
     </style>
 </head>
 <body>
-    <!-- Container for the image gallery -->
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="cardgallery.html">Card Gallery</a></li>
+      </ul>
+      <div style="margin-left:25%;padding:1px 16px;height:1000px;">
 <div class="container">
 
     <!-- Full-width images with number text -->
     <div class="mySlides">
-      <div class="numbertext">1 / 6</div>
-        <img src="Zeus.png" style="width:50%">
+      <div class="numbertext">1 / 4</div>
+        <img src="Zeus.png" style="width:33.33%" class="centerimg">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">2 / 6</div>
-        <img src="Brahman.png" style="width:50%">
+      <div class="numbertext">2 / 4</div>
+        <img src="Brahman.png" style="width:33.33%" class="centerimg">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">3 / 6</div>
-        <img src="Yawei & Jesus.png" style="width:50%">
+      <div class="numbertext">3 / 4</div>
+        <img src="Yawei & Jesus.png" style="width:33.33%" class="centerimg">
     </div>
+    <div class="mySlides">
+        <div class="numbertext">4 / 4</div>
+          <img src="Chaos.png" style="width:33.33%" class="centerimg">
+      </div>
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -128,16 +174,20 @@
   
     <!-- Thumbnail images -->
     <div class="row">
-      <div class="column">
-        <img class="demo cursor" src="Zeus.png" style="width:50%" onclick="currentSlide(1)" alt="Zeus">
+      <div class="column" style="margin: auto">
+        <img class="demo cursor" src="Zeus.png" style="width:100%" onclick="currentSlide(1)" alt="Zeus">
       </div>
-      <div class="column">
-        <img class="demo cursor" src="Brahman.png" style="width:50%" onclick="currentSlide(2)" alt="Brahman">
+      <div class="column" style="margin: auto">
+        <img class="demo cursor" src="Brahman.png" style="width:100%" onclick="currentSlide(2)" alt="Brahman">
       </div>
-      <div class="column">
-        <img class="demo cursor" src="Yawei & Jesus.png" style="width:50%" onclick="currentSlide(3)" alt="Yawei & Jesus">
+      <div class="column" style="margin: auto">
+        <img class="demo cursor" src="Yawei & Jesus.png" style="width:100%" onclick="currentSlide(3)" alt="Yawei & Jesus">
+      </div>
+      <div class="column" style="margin: auto">
+        <img class="demo cursor" src="Chaos.png" style="width:100%" onclick="currentSlide(4)" alt="Chaos">
       </div>
     </div>
+  </div>
   </div>
   <script>
       let slideIndex = 1;
