--- a/cardgallery.html
+++ b/cardgallery.html
@@ -146,22 +146,30 @@ li a:hover:not(.active) {
 
     <!-- Full-width images with number text -->
     <div class="mySlides">
-      <div class="numbertext">1 / 4</div>
-        <img src="Zeus.png" style="width:33.33%" class="centerimg">
+      <div class="numbertext">1 / 6</div>
+        <img src="Zeus.png" style="width:16.66%" class="centerimg">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">2 / 4</div>
-        <img src="Brahman.png" style="width:33.33%" class="centerimg">
+      <div class="numbertext">2 / 6</div>
+        <img src="Brahman.png" style="width:16.66%" class="centerimg">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">3 / 4</div>
-        <img src="Yawei & Jesus.png" style="width:33.33%" class="centerimg">
+      <div class="numbertext">3 / 6</div>
+        <img src="Yawei & Jesus.png" style="width:16.66%" class="centerimg">
     </div>
     <div class="mySlides">
-        <div class="numbertext">4 / 4</div>
-          <img src="Chaos.png" style="width:33.33%" class="centerimg">
+        <div class="numbertext">4 / 6</div>
+          <img src="Chaos.png" style="width:16.66%" class="centerimg">
+      </div>
+        <div class="mySlides">
+        <div class="numbertext">5 / 6</div>
+          <img src="Hades.png" style="width:16.66%" class="centerimg">
+      </div>
+        <div class="mySlides">
+        <div class="numbertext">6 / 6</div>
+          <img src="Poseidon.png" style="width:16.66%" class="centerimg">
       </div>
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -185,6 +193,12 @@ li a:hover:not(.active) {
       </div>
       <div class="column" style="margin: auto">
         <img class="demo cursor" src="Chaos.png" style="width:100%" onclick="currentSlide(4)" alt="Chaos">
+      </div>
+        <div class="column" style="margin: auto">
+        <img class="demo cursor" src="Hades.png" style="width:100%" onclick="currentSlide(5)" alt="Hades">
+      </div>
+        <div class="column" style="margin: auto">
+        <img class="demo cursor" src="Poseidon.png" style="width:100%" onclick="currentSlide(6)" alt="Poseidon">
       </div>
     </div>
   </div>
