--- a/cardgallery.html
+++ b/cardgallery.html
@@ -84,7 +84,7 @@
 /* Six columns side by side */
 .column {
   float: left;
-  width: 16.66%;
+  width: 12.5%;
 }
 
 /* Add a transparency effect for thumnbail images */
@@ -146,30 +146,38 @@ li a:hover:not(.active) {
 
     <!-- Full-width images with number text -->
     <div class="mySlides">
-      <div class="numbertext">1 / 6</div>
+      <div class="numbertext">1 / 8</div>
         <img src="Zeus.png" style="width:33.33%" class="centerimg">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">2 / 6</div>
+      <div class="numbertext">2 / 8</div>
         <img src="Brahman.png" style="width:33.33%" class="centerimg">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">3 / 6</div>
+      <div class="numbertext">3 / 8</div>
         <img src="Yawei & Jesus.png" style="width:33.33%" class="centerimg">
     </div>
     <div class="mySlides">
-        <div class="numbertext">4 / 6</div>
+        <div class="numbertext">4 / 8</div>
           <img src="Chaos.png" style="width:33.33%" class="centerimg">
       </div>
         <div class="mySlides">
-        <div class="numbertext">5 / 6</div>
+        <div class="numbertext">5 / 8</div>
           <img src="Hades.png" style="width:33.33%" class="centerimg">
       </div>
         <div class="mySlides">
-        <div class="numbertext">6 / 6</div>
+        <div class="numbertext">6 / 8</div>
           <img src="Poseidon.png" style="width:33.33%" class="centerimg">
+      </div>
+    <div class="mySlides">
+        <div class="numbertext">7 / 8</div>
+          <img src="Dionysus.png" style="width:33.33%" class="centerimg">
+      </div>
+    <div class="mySlides">
+        <div class="numbertext">8 / 8</div>
+          <img src="Hermes.png" style="width:33.33%" class="centerimg">
       </div>
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -199,6 +207,12 @@ li a:hover:not(.active) {
       </div>
         <div class="column" style="margin: auto">
         <img class="demo cursor" src="Poseidon.png" style="width:100%" onclick="currentSlide(6)" alt="Poseidon">
+      </div>
+        <div class="column" style="margin: auto">
+        <img class="demo cursor" src="Dionysus.png" style="width:100%" onclick="currentSlide(7)" alt="Dionysus">
+      </div>
+        <div class="column" style="margin: auto">
+        <img class="demo cursor" src="Hermes.png" style="width:100%" onclick="currentSlide(8)" alt="Hermes">
       </div>
     </div>
   </div>
