--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <li class="nav-item">
         <a class="nav-link" href="play2048.html">2048</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="slope.html">Slope Game</a>
+      </li>
     </ul>
   </div>
 </nav>
@@ -55,6 +58,9 @@
         <li class="nav-item">
           <a class="nav-link" href="play2048.html">2048</a>
         </li>
+        <li class="nav-item">
+        <a class="nav-link" href="slope.html">Slope Game</a>
+      </li>
       </ul>
       <hr class="d-sm-none">
       <br>
@@ -64,7 +70,7 @@
           <a class="nav-link" href="#">Hackpacks</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="cardgallery.html">Mythology Card Gallery!</a>
+          <a class="nav-link" href="cardgallery.html">Mythomadness Card Gallery!</a>
         </li>
       </ul>
       <hr class="d-sm-none">
