--- a/slope.html
+++ b/slope.html
@@ -1,90 +1,57 @@
-<html lang="en-us"><head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Slope</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width="1200" height="750" style="width: 960px; height: 600px; cursor: default;"></canvas>
-      <div id="unity-loading-bar" style="display: none;">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full" style="width: 100%;"></div>
-        </div>
-      </div>
-      <div id="unity-mobile-warning">
-        WebGL builds are not supported on mobile devices.
-      </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Slope</div>
-      </div>
-    </div>
-    <script id="id-jssdk" src="https://cdn.y8.com/api/sdk.js"></script><script>
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SlopeBuild.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/SlopeBuild.data.gz",
-        frameworkUrl: buildUrl + "/SlopeBuild.framework.js.gz",
-        codeUrl: buildUrl + "/SlopeBuild.wasm.gz",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "Y8",
-        productName: "Slope",
-        productVersion: "1.2",
-      };
+<html>
+	<head><title>karmayxzu's Slope</title></head>
+	<body>
+		<div class="site-code-embed-container" data-code="<link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/syntex1147/games@a84ea193d1f57883498f46d860a5360aabe8a678/slope/style.css&quot;>
+    <script src=&quot;https://cdn.jsdelivr.net/gh/syntex1147/games@a84ea193d1f57883498f46d860a5360aabe8a678/slope/UnityProgress.js&quot;></script>
+    <script src=&quot;https://cdn.jsdelivr.net/gh/syntex1147/games@a84ea193d1f57883498f46d860a5360aabe8a678/slope/unityloader41.js&quot;></script>
 
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var mobileWarning = document.querySelector("#unity-mobile-warning");
-
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        container.className = "unity-mobile";
-        // Avoid draining fillrate performance on mobile devices,
-        // and default/override low DPI mode on mobile browsers.
-        config.devicePixelRatio = 1;
-        mobileWarning.style.display = "block";
-        setTimeout(() => {
-          mobileWarning.style.display = "none";
-        }, 5000);
-      } else {
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+    <script type=&quot;text/javascript&quot;>
+      var gameInstance;
+      window.onload = function () {
+        let  bttn = document.createElement( &quot;button&quot; );
+        bttn.appendChild(document.createTextNode( &quot;CLICK TO PLAY NOW&quot; ));
+        bttn.setAttribute('id', 'run_game');
+        bttn.style.display = 'none';
+        bttn.style.position = 'absolute';
+        document.body.appendChild(bttn);
+        bttn.style.display = 'block';
+        bttn.style.left = ((document.body.clientWidth - bttn.offsetWidth)/2) + 'px';
+        bttn.style.top = ((document.body.clientHeight - bttn.offsetHeight)/2) + 'px';
+        bttn.onclick = function () {
+          gameInstance = UnityLoader.instantiate(&quot;gameContainer&quot;, &quot;https://cdn.jsdelivr.net/gh/syntex1147/games@a84ea193d1f57883498f46d860a5360aabe8a678/slope/slope.json&quot;, {onProgress: UnityProgress,Module:{onRuntimeInitialized: function() {UnityProgress(gameInstance, &quot;complete&quot;)}}});
+          this.remove();
+        }
       }
-      loadingBar.style.display = "block";
-	  var myGameInstance = null;
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-		  myGameInstance = unityInstance;
-          loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
-        }).catch((message) => {
-          alert(message);
-        });
-      };
-      document.body.appendChild(script);
-    </script><script src="Build/SlopeBuild.loader.js"></script>
-    <script async="" data-ad-client="ca-pub-6129580795478709" data-ad-channel="6347007127" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
     </script>
-     <script type="text/javascript" src="js/gameBreakBeta.js"></script>
-  
-
-<script src="Build/SlopeBuild.framework.js.gz"></script><iframe frameborder="0" scrolling="no" style="background-color: transparent; border: 0px; display: none;"></iframe><div id="GOOGLE_INPUT_CHEXT_FLAG" style="display: none;" input="" input_stat="{&quot;tlang&quot;:true,&quot;tsbc&quot;:true,&quot;pun&quot;:true,&quot;mk&quot;:true,&quot;ss&quot;:true}"></div><div id="id-root" class="id-reset"></div><iframe name="easyXDM_id_xd_api_provider" id="easyXDM_id_xd_api_provider" src="https://cdn.y8.com/Xd/xd_handler.html?version=42&amp;xdm_e=https%3A%2F%2Fstorage.y8.com&amp;xdm_c=id_xd_api&amp;xdm_p=1" frameborder="0" style="position: absolute; top: -2000px; left: 0px;"></iframe></body></html>
+    <div class=&quot;webgl-content&quot;>
+      <div id=&quot;gameContainer&quot; style=&quot;width: 100%; height: 100%; margin: auto&quot;></div>
+    </div>
+<style>
+button {
+  min-width: 100%;
+  font-family: inherit;
+  appearance: none;
+  border: 0;
+  border-radius: 5px;
+  background: #2c2c2c;
+  color: #fff;
+  padding: 18px 46px;
+  font-size: 28px;
+  cursor: pointer;
+}
+button:hover {
+  background: #3f3f3f;
+}
+button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px #cbd6ee;
+} 
+button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+</style>" data-scrollable="false" style="display:block;text-align:center;margin-right:auto;margin-left:auto;width:800px;height:600px;"><iframe id="jot-code-embed-sandbox-0" name="jot-code-embed-sandbox-0" class="site-code-embed-sandbox" sandbox="allow-scripts allow-popups allow-forms allow-same-origin allow-popups-to-escape-sandbox" scrolling="no" frameborder="0" src="https://www.gstatic.com/jotspot/embeds/code/0f08d42392f2000e7e3f3daf5b427a43/outer_iframe.html?jsh=m%3B%2F_%2Fscs%2Fabc-static%2F_%2Fjs%2Fk%3Dgapi.lb.en.z9QjrzsHcOc.O%2Fd%3D1%2Frs%3DAHpOoo8359JQqZQ0dzCVJ5Ui3CZcERHEWA%2Fm%3D__features__&amp;ceiid=0"></iframe></div>
+	</body>
+</html>
