--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@ hr {
 <body>
 
 <div class="bgimg">
-  <div class="topleft">
+<!--   <div class="topleft">
     <p>karmayxzu's Game Hub</p>
   </div>
   <div class="middle">
@@ -53,7 +53,7 @@ hr {
     <hr>
     <p>We're sorry, but our bots can't find this page!</p>
   </div>
-  </div>
+  </div> -->
 </div>
 
 </body>
