--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('errors.png');
+  background-image: url('404.png');
   height: 100%;
   background-position: center;
   background-size: cover;
