--- a/chatroom.html
+++ b/chatroom.html
@@ -1,2 +1,2 @@
 <head><title>Game Hub Chatroom</title></head>
-<div id="tlkio" data-channel="gamehubchat" style="width:100%;height:100%;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
+<iframe src="https://tlk.io/gamehubchat" width="100%" height="100%></iframe>
