--- a/chatroom.html
+++ b/chatroom.html
@@ -1,2 +1,2 @@
 <head><title>Game Hub Chatroom</title></head>
-<iframe src="https://tlk.io/gamehubchat" width="100%" height="100%></iframe>
+<iframe src="https://stin.to/q6a4c">
