--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-6">
+      <h2 class="mt-5">Welcome!</h2>
+      <h5>October 15, 2022</h5>
+      <p>Hi there, welcome to the new game hub website!</p>
+      <br><br>
       <h2 class="mt-5">Start Jumbling</h2>
       <h5>May 2, 2022</h5>
       <p>I've got 2048 up and running. Start jumbling to get to the 2048 tile!</p>
