--- a/cardgallery.html
+++ b/cardgallery.html
@@ -213,10 +213,10 @@ li a:hover:not(.active) {
         <img class="demo cursor" src="Hermes.png" style="width:100%" onclick="currentSlide(8)" alt="Hermes">
       </div>
         <div class="column" style="margin: auto">
-        <img class="demo cursor" src="Hera.png" style="width:100%" onclick="currentSlide(9)" alt="Hermes">
+        <img class="demo cursor" src="Hera.png" style="width:100%" onclick="currentSlide(9)" alt="Hera">
       </div>
         <div class="column" style="margin: auto">
-        <img class="demo cursor" src="Hephaestus.png" style="width:100%" onclick="currentSlide(10)" alt="Hermes">
+        <img class="demo cursor" src="Hephaestus.png" style="width:100%" onclick="currentSlide(10)" alt="Hephaestus">
       </div>
     </div>
   </div>
