--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </style>
 </head>
 <body>
-
+<audio autoplay>
+  <source src="rickroll.mp3" type="audio/mpeg">
+</audio>
 <div class="p-5 bg-primary text-white text-center">
   <h1>karmayxzu's game hub</h1>
 </div>
