--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+      var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+  if (!isChrome){
+      $('#iframeAudio').remove()
+  }
+  else {
+      $('#playAudio').remove() // just to make sure that it will not have 2x audio in the background 
+  }
+  </script>
   <style>
   .fakeimg {
     height: 200px;
@@ -15,8 +24,10 @@
 </head>
 <body>
 <audio autoplay>
-  <source src="rickroll.mp3" type="audio/mpeg">
+  <source src="rickroll.mp3" type="audio/mpeg" id="playAudio">
 </audio>
+  <iframe src="audio/source.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+</iframe> 
 <div class="p-5 bg-primary text-white text-center">
   <h1>karmayxzu's game hub</h1>
 </div>
